Add js extension logic, various central stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
   "emmet.includeLanguages": {
     "rust": "html"
-  }
+  },
+  "rust-analyzer.checkOnSave.extraArgs": [
+    "--no-deps"
+  ],
+  "rust-analyzer.checkOnSave.extraEnv": {
+      "RUSTFLAGS": "-C target-cpu=native -Zshare-generics=y -Csplit-debuginfo=unpacked"
+  },
 }
