--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -17,6 +17,13 @@ tauri-build = {version = "1.2", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = {version = "1.2", features = ["system-tray"] }
+rocket = { version = "0.5.0-rc.2", features = ["json"] }
+tokio = { version = "1.0", features = ["full"] }
+anyhow = { version = "1.0", features = ["backtrace"] }
+reqwest = "0.11.13"
+rocket_anyhow = "0.1.1"
+zip = "0.6.3"
+shellexpand = "3.0.0"
 
 [features]
 # by default Tauri runs in production mode
